Bizfi Production/src/objects/AWDynamicCategories__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Store the categories being tracked, such as Lead and Opportuntiy Stages.</description>
    <fields>
        <fullName>Average_Min__c</fullName>
        <label>Average Min</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Work_Hours__c</fullName>
        <label>Total Work Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Work_Min__c</fullName>
        <label>Total Work Min</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AWDynamicCategories</label>
</CustomObject>